# RayTracer

./: .gitignore  CMakeLists.txt  README  aabb.h  bvh.h  camera.h  color.h  constant_medium.h  cubemap.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  obj.h  perlin.h  quad.h  ray.h  raytracer.h  rtw_stb_image.h  sphere.h  test.cpp  texture.h  vec2.h  vec3.h
renders/: blur.ppm  final.ppm  mat.ppm  model.ppm  perlin.ppm  xmas.ppm
